--- a/html/rest3.html
+++ b/html/rest3.html
@@ -21,7 +21,7 @@
     </header>
 
     <main class="restau--bckgrd">
-        <section class="restau__img "><img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=""></section>
+        <section class="restau__img "></section>
         <header class="restau__name">
             <h1 class="restau__name__title">À la française</h1>
             <div class="heart__icon restau__icon"><i class="heart__icon__fa restau__heart fa-regular fa-heart"></i></div>
