--- a/html/rest2.html
+++ b/html/rest2.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -21,7 +21,7 @@
     </header>
 
     <main class="restau--bckgrd">
-        <section class="restau__img "><img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=""></section>
+        <section class="restau__img "></section>
         <header class="restau__name">
             <h1 class="restau__name__title">La note enchantée</h1>
             <div class="heart__icon restau__icon"><i class="heart__icon__fa restau__heart fa-regular fa-heart"></i></div>
