--- a/acceuil.html
+++ b/acceuil.html
@@ -22,7 +22,7 @@
     <main>
         <section class="location">
             <div class="location__choice">
-                <i class="fa-solid fa-location-dot"></i>
+                <i class="location__choice__icon fa-solid fa-location-dot"></i>
                 <input type="text" placeholder="Paris, Belleville">
             </div>
             <div>
@@ -56,67 +56,69 @@
         </section>
         <section class="rest">
             <h2 class="rest__title">Restaurants</h2>
-            <div class="rest__card">
-                <a href="html/rest1.html">
-                    <img class="rest__card__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                        alt="photo plat">
-                    <div></div>
-                    <div class="rest__card__content">
-                        <div class="rest__card__content__text">
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
+            <div class="rest--flex">
+                <div class="rest__card">
+                    <a href="html/rest1.html">
+                        <img class="rest__card__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt="photo plat">
+                        <div></div>
+                        <div class="rest__card__content">
+                            <div class="rest__card__content__text">
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <div class="heart__icon">
+                                <i class="heart__icon__fa fa-regular fa-heart "></i>
+                            </div>
                         </div>
-                        <div class="heart__icon">
-                            <i class="heart__icon__fa fa-regular fa-heart "></i>
+                    </a>
+                </div>
+                <div class="rest__card">
+                    <a href="html/rest2.html">
+                        <img class="rest__card__img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                            alt="photo plat">
+                        <div></div>
+                        <div class="rest__card__content">
+                            <div class="rest__card__content__text">
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                            </div>
+                            <div class="heart__icon">
+                                <i class="heart__icon__fa fa-regular fa-heart "></i>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-            <div class="rest__card">
-                <a href="html/rest2.html">
-                    <img class="rest__card__img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                        alt="photo plat">
-                    <div></div>
-                    <div class="rest__card__content">
-                        <div class="rest__card__content__text">
-                            <h3>La note enchantée</h3>
-                            <p>Charonne</p>
+                    </a>
+                </div>
+                <div class="rest__card">
+                    <a href="html/rest3.html">
+                        <img class="rest__card__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                            alt="photo plat">
+                        <div class="rest__card__content">
+                            <div class="rest__card__content__text">
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                            </div>
+                            <div class="heart__icon">
+                                <i class="heart__icon__fa fa-regular fa-heart "></i>
+                            </div>
                         </div>
-                        <div class="heart__icon">
-                            <i class="heart__icon__fa fa-regular fa-heart "></i>
+                    </a>
+                </div>
+                <div class="rest__card">
+                    <a href="html/rest4.html">
+                        <img class="rest__card__img"
+                            src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo plat">
+                        <div class="rest__card__content">
+                            <div class="rest__card__content__text">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                            <div class="heart__icon">
+                                <i class="heart__icon__fa fa-regular fa-heart"></i>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-            <div class="rest__card">
-                <a href="html/rest3.html">
-                    <img class="rest__card__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                        alt="photo plat">
-                    <div class="rest__card__content">
-                        <div class="rest__card__content__text">
-                            <h3>À la française</h3>
-                            <p>Cité Rouge</p>
-                        </div>
-                        <div class="heart__icon">
-                            <i class="heart__icon__fa fa-regular fa-heart "></i>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="rest__card">
-                <a href="html/rest4.html">
-                    <img class="rest__card__img"
-                        src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo plat">
-                    <div class="rest__card__content">
-                        <div class="rest__card__content__text">
-                            <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt</p>
-                        </div>
-                        <div class="heart__icon">
-                            <i class="heart__icon__fa fa-regular fa-heart"></i>
-                        </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
